# portmap

./: LICENSE  PRD.md  README.md  README_ja.md  THIRD_PARTY_LICENSES.md  pyproject.toml
.github/workflows/: ci.yml
src/portmap/: __init__.py  __main__.py  cli.py  core.py  formatters.py  watcher.py
src/portmap.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: __init__.py  test_cli.py  test_core.py  test_formatters.py
